--- a/style.css
+++ b/style.css
@@ -31,11 +31,11 @@ header .block2 {
     margin-top: 15px;
 }
 header .block2 .formulaire {
+    display: flex;
     width: 40%;
 }
 header .block2 form #localisation {
     padding: 6px;
-    margin: 5px 0px 5px 0px;
     border-right-style: none;
     border-left-style: none;
     border-width: 0.5px;
@@ -66,12 +66,14 @@ header .block2 .filtre {
     font-weight: bold;
 }
 header .block2 ul {
+    display: flex;
     width: 45%;
     padding: 0px;
     margin: 0px;
 }
 header .block2 ul li {
-    display: inline-block;
+    display: flex;
+    align-items: center;
     border-color: rgb(192, 191, 191);
     border-style: solid;
     border-left: none;
@@ -81,15 +83,99 @@ header .block2 ul li {
     border-radius: 26px;
 }
 header .block2 ul li i {
+    display: block;
+    text-align: center;
     background-color: blue;
     color: white;
     margin-right: 6px;
     padding: 8px;
     border-radius: 25px;
+    width: 20px;
+    height: 20px;
 }
 header p {
     margin: 0px;
 }
 header p i {
     color: blue;
+}
+
+
+.main {
+    margin-top: 40px;
+}
+.main .favoris {
+    background-color: rgb(242, 242, 242);
+    border-radius: 20px;
+    padding: 40px;
+}
+.main .favoris .favoristexte {
+    text-align: center;
+    color: blue;
+    font-weight: bold;
+    font-size: x-large;
+    margin-top: 0px;
+}
+.main .favoris .articles{
+    display: flex;
+    justify-content: space-between;
+}
+.main .favoris article {
+    background-color: white;
+    border-radius: 20px;
+    width: 330px;
+}
+.main .favoris article img {
+    display: flex;
+    text-align: center;
+    margin: auto;
+    margin-top: 10px;
+    width: 95%;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+}
+.main .favoris article p {
+    margin: 10px;
+}
+.main .favoris article .gras {
+    font-weight: bold;
+}
+.main .favoris article .emote {
+    padding-bottom: 20px;
+    padding-left: 10px;
+}
+
+.main .hebergements .second2 {
+    background-color: rgb(242, 242, 242);
+    border-radius: 25px;
+}
+.main .hebergements .textehebergements {
+    text-align: center;
+    color: blue;
+    font-weight: bold;
+    background-color: white;
+    padding: 10px;
+    border-style: solid;
+    border-radius: 25px;
+    border-color: rgb(242, 242, 242);
+}
+.main .hebergements article {
+
+}
+.main .hebergements article img {
+    display: flex;
+    text-align: center;
+    margin-right: 0px;
+    width: 20%
+}
+.second {
+    display: flex;
+}
+.main .luxe {
+    display: flex;
+    flex-direction: column;
+    height:max-content;
+}
+.main .luxe article img {
+    width: 20%;
 }
